# movieclassifier

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  tests.yml
data/interim/: .gitignore  movie_data.csv.dvc
docs/: conf.py  index.rst  reference.rst
movieclassifier/: __init__.py  config.py  data.py  eval.py  main.py  models.py  predict.py  train.py  utils.py
notebooks/: movieclassifier.ipynb
stores/model/0/: meta.yaml
stores/model/0/40b0c3bc0b934cfa998e43bc5b9679d0/: meta.yaml
stores/model/0/40b0c3bc0b934cfa998e43bc5b9679d0/metrics/: Accuracy
stores/model/0/40b0c3bc0b934cfa998e43bc5b9679d0/tags/: mlflow.log-model.history
stores/model/0/422daa1262a54380b54ccecd54a23726/: meta.yaml
stores/model/0/422daa1262a54380b54ccecd54a23726/metrics/: training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc_score  training_score
stores/model/0/422daa1262a54380b54ccecd54a23726/tags/: mlflow.log-model.history
stores/model/0/99331a090a42489cb5019ca1e23a0c41/: meta.yaml
stores/model/0/99331a090a42489cb5019ca1e23a0c41/metrics/: training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc_score  training_score
stores/model/0/99331a090a42489cb5019ca1e23a0c41/tags/: mlflow.log-model.history  mlflow.source.git.commit
stores/model/0/ea8bcd75c0ec437e835ae91ac4b22c6a/: meta.yaml
stores/model/0/ea8bcd75c0ec437e835ae91ac4b22c6a/metrics/: training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc_score  training_score
stores/model/0/ea8bcd75c0ec437e835ae91ac4b22c6a/tags/: mlflow.log-model.history
stores/model/0/f998f8814aa4466698b793d9a25e3d31/: meta.yaml
stores/model/1/: meta.yaml
stores/model/1/0781f73db3e3446ebd4fb15c02163c9b/: meta.yaml
stores/model/1/219261a54f854ae5a1cb1a547f5a9cdb/: meta.yaml
tests/: __init__.py  test_movieclassifier.py
(+21 files in other folders)
