[tool.poetry]
name = "movieclassifier"
version = "0.1.0"
description = ""
authors = ["Fallou Tall <cmftall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
dvc = "^2.1.0"
PyPrind = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
