[tool.poetry]
name = "movieclassifier"
version = "0.1.0"
description = ""
authors = ["Fallou Tall <cmftall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
dvc = "^2.1.0"
PyPrind = "^2.11.3"
nltk = "^3.6.2"
numpy = "^1.20.3"
scikit-learn = "^0.24.2"
mlflow = "^1.17.0"
pretty-errors = "^1.2.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"
pytest-cov = "^2.12.0"
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.812"
pytype = {version = "^2021.5.14", python = "3.8"}
typeguard = "^2.12.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
xdoctest = "^0.15.4"
Sphinx = "^4.0.1"
sphinx-autodoc-typehints = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
